Adiciona Frontend Razor Pages

--- a/SocialMediaFreelas.App/SocialMediaFreelas.csproj
+++ b/SocialMediaFreelas.App/SocialMediaFreelas.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Experiencias\" />
+    <Folder Include="Pages\Clientes\" />
+    <Folder Include="Pages\Vagas\" />
+  </ItemGroup>
+
 </Project>
