--- a/SocialMediaFreelas.App/appsettings.json
+++ b/SocialMediaFreelas.App/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqliteConnectionString": "Data Source=SocialMediaFreelas.db"
+  }
 }
