Finaliza tela login

--- a/SocialMediaFreelas.App/SocialMediaFreelas.csproj
+++ b/SocialMediaFreelas.App/SocialMediaFreelas.csproj
@@ -27,6 +27,7 @@
     <Folder Include="Pages\Experiencias\" />
     <Folder Include="Pages\Clientes\" />
     <Folder Include="Pages\Vagas\" />
+    <Folder Include="wwwroot\assets\img\" />
   </ItemGroup>
 
 </Project>
